bindings/swift/lib/iota_sdk_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_iota_sdk_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_iota_sdk_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_iota_sdk_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_iota_sdk_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_iota_sdk_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_iota_sdk_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_iota_sdk_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_iota_sdk_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_iota_sdk_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_iota_sdk_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_iota_sdk_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_free_void(uint64_t handle
);
void ffi_iota_sdk_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_faucetclient_request(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_faucetclient_request_and_wait(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_faucetclient_request_status(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_active_validators(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_balance(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_chain_id(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_checkpoint(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_checkpoints(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_coin_metadata(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_coins(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_dry_run_tx(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_dry_run_tx_kind(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_dynamic_field(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_dynamic_fields(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_dynamic_object_field(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_epoch(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_epoch_total_checkpoints(void
    
);
uint16_t uniffi_iota_sdk_ffi_checksum_method_graphqlclient_epoch_total_transaction_blocks(void
    
);